version/0.16/_sources/api/solver/_autosummary/settings/enabled_2.rst.txt
:orphan:

.. _enabled_2:

enabled
=======

.. autoclass:: ansys.fluent.core.solver.settings_232.enabled_2.enabled
    :show-inheritance:

.. rubric:: Included in:

==========================================================================================   ====================================================================================================================================

Parent                                                                                                                                                                                                                    Summary

==========================================================================================   ====================================================================================================================================
:ref:`enable_motion_transfer_across_interfaces <enable_motion_transfer_across_interfaces>`       Transfer motion from one side of the interface to the other when only one side undergoes user-defined or system-coupling motion.

:ref:`adaptive_time_stepping <adaptive_time_stepping>`                                                                                                                                            'adaptive_time_stepping' child.

:ref:`mp_specific_time_stepping <mp_specific_time_stepping>`                                                                                                                                   'mp_specific_time_stepping' child.

:ref:`plot <plot_1>`                                                                                                                                                                                                'plot' child.

:ref:`filter_settings <filter_settings>`                                                                                                                                                                 'filter_settings' child.

:ref:`constant_color <constant_color>`                                                                                                                                                                    'constant_color' child.

:ref:`track_single_particle_stream <track_single_particle_stream>`                                                                                                                          'track_single_particle_stream' child.

:ref:`laplace_smoothing <laplace_smoothing>`                                                                                                                                                           'laplace_smoothing' child.

==========================================================================================   ====================================================================================================================================

